# Courier

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/courier-adapter/: Cargo.toml
crates/courier-adapter/src/: lib.rs
crates/courier-app/: Cargo.toml
crates/courier-app/src/: lib.rs
crates/courier-credential/: Cargo.toml
crates/courier-credential/src/: lib.rs
crates/courier-domain/: Cargo.toml
crates/courier-domain/src/: lib.rs
crates/courier-mime/: Cargo.toml
crates/courier-mime/src/: lib.rs
crates/courier-proto/: Cargo.toml
crates/courier-proto/src/: lib.rs
crates/courier-provider/: Cargo.toml
crates/courier-provider/src/: lib.rs
crates/courier-render/: Cargo.toml
crates/courier-render/src/: lib.rs
crates/courier-search/: Cargo.toml
crates/courier-search/src/: lib.rs
crates/courier-security/: Cargo.toml
crates/courier-security/src/: lib.rs
crates/courier-storage/: Cargo.toml
crates/courier-storage/src/: lib.rs
crates/courier-sync/: Cargo.toml
crates/courier-sync/src/: lib.rs
crates/courier-ui/: Cargo.toml
crates/courier-ui/src/: app.rs  main.rs  theme.rs
crates/courier-ui/src/components/: action_bar.rs  attachment.rs  avatar.rs  badge.rs  empty_state.rs  form.rs  icon.rs  list.rs  mod.rs  notice.rs  search.rs  status_bar.rs  surface.rs
crates/courier-ui/src/views/: account_setup.rs  composer.rs  mailbox_list.rs  mod.rs  reader.rs  thread_list.rs
crates/mailcore/: Cargo.toml
crates/mailcore/src/: account.rs  lib.rs  model.rs  search.rs
crates/mailcore/src/imap/: mod.rs
crates/mailcore/src/smtp/: mod.rs
crates/mailcore/src/storage/: mod.rs
crates/mailcore/src/sync/: mod.rs
crates/mailproto/: Cargo.toml
crates/mailproto/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  main.rs
crates/ui/src/components/: status_bar.rs
crates/ui/src/views/: folder_list.rs  mod.rs  reader.rs  thread_list.rs
migrations/: 0001_initial.sql  001_init.sql  002_search.sql
packaging/: build-installers.ps1  courier.app.toml  generate-icons.ps1  migrations.md  release-manifest.json  verify-release-smoke.ps1
packaging/installers/: courier.installers.toml
