[workspace]
members = [
    "crates/mailproto",
    "crates/mailcore",
    "crates/ui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = ""

[workspace.dependencies]
anyhow = "1"
iced = { version = "0.13", features = ["tokio"] }
mailcore = { path = "crates/mailcore" }
mailproto = { path = "crates/mailproto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rusqlite = { version = "0.32", features = ["bundled"] }