[workspace]
members = [
    "crates/courier-proto",
    "crates/courier-domain",
    "crates/courier-storage",
    "crates/courier-mime",
    "crates/courier-render",
    "crates/courier-security",
    "crates/courier-credential",
    "crates/courier-provider",
    "crates/courier-adapter",
    "crates/courier-sync",
    "crates/courier-search",
    "crates/courier-app",
    "crates/courier-ui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = ""

[workspace.metadata.courier]
app_name = "Courier"
bundle_identifier = "dev.hephaestus.courier"
publisher = "Hephaestus"
summary = "Local-first desktop email client"
data_dir_name = ".courier"
config_schema = 1
database_schema = 3

[workspace.dependencies]
anyhow = "1"
courier-adapter = { path = "crates/courier-adapter" }
courier-app = { path = "crates/courier-app" }
courier-credential = { path = "crates/courier-credential" }
courier-domain = { path = "crates/courier-domain" }
courier-mime = { path = "crates/courier-mime" }
courier-proto = { path = "crates/courier-proto" }
courier-provider = { path = "crates/courier-provider" }
courier-render = { path = "crates/courier-render" }
courier-search = { path = "crates/courier-search" }
courier-security = { path = "crates/courier-security" }
courier-storage = { path = "crates/courier-storage" }
courier-sync = { path = "crates/courier-sync" }
iced = { version = "0.13", features = ["tokio"] }
keyring = "3.6.3"
oauth2 = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rusqlite = { version = "0.32", features = ["bundled"] }
ego-tree = "0.11"
scraper = "0.27"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
