[package]
name = "courier-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
courier-domain.workspace = true
courier-proto.workspace = true
courier-render.workspace = true
courier-search.workspace = true
courier-security.workspace = true
courier-storage.workspace = true
courier-sync.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
