[package]
name = "courier-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
courier-domain.workspace = true
courier-mime.workspace = true
courier-proto.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
