[package]
name = "courier-sync"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
courier-adapter.workspace = true
courier-domain.workspace = true
courier-proto.workspace = true
courier-storage.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
